<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015 Samsung Electronics Co., LTD
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_overlay"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/button_back"
        android:layout_width="49.9dp"
        android:layout_height="49.9dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="19.5dp"
        android:background="@drawable/bg_menu"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="20.5dp"
            android:layout_height="20.5dp"
            android:src="@drawable/icon_back_sharing"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8.2dp"
                android:layout_toEndOf="@id/ic_pet"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/sxr"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/ic_pet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_pet"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <TextView
            style="@style/StatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="19.9dp"
            android:text="@string/team"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="10dp"
            android:text="@string/site"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>